kubernetes/rendered/staging/infrastructure/groundcover/networking.k8s.io_v1_networkpolicy_groundcover_groundcover-clickhouse.yaml
# Source: groundcover-wrapper/charts/groundcover/charts/clickhouse/templates/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: groundcover-clickhouse
  namespace: groundcover
  labels:
    app.kubernetes.io/instance: groundcover
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: clickhouse
    app.kubernetes.io/version: 24.10.1
    helm.sh/chart: clickhouse-6.3.1
    app.kubernetes.io/component: clickhouse
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: groundcover
      app.kubernetes.io/name: clickhouse
      app.kubernetes.io/component: clickhouse
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
    - ports:
        - port: 8123
        - port: 9000
        - port: 9004
        - port: 9005
        - port: 9009
        - port: 2181
        - port: 9444
        - port: 8001
